--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="button_map">Vai alla mappa</string>
     <string name="ivrea_map_title">Ivrea</string>
-
+    <string name="ivrea_map_suggest">Scegli un luogo</string>
+    
 </resources>
