--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,9 +5,21 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="button_map">Vai alla mappa</string>
+    <string name="button_battle">Gioca</string>
     <string name="ivrea_map_title">Ivrea</string>
     <string name="ivrea_map_suggest">Scegli un luogo</string>
     <string name="ivrea_map_button_history">Storia</string>
     <string name="ivrea_map_button_battle">Battaglia</string>
-    
+    <string name="orange">Arance</string>
+
+    <plurals name="orange">
+        <item quantity="one">1 arancia</item>
+        <item quantity="other">%d arance</item>
+    </plurals><plurals name="point">
+        <item quantity="one">1 punto</item>
+        <item quantity="other">%d punti</item>
+    </plurals>
+
+    <string name="player">Player</string>
+
 </resources>
