--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,11 +15,14 @@
     <plurals name="orange">
         <item quantity="one">1 arancia</item>
         <item quantity="other">%d arance</item>
-    </plurals><plurals name="point">
+    </plurals>
+    <plurals name="point">
         <item quantity="one">1 punto</item>
         <item quantity="other">%d punti</item>
     </plurals>
 
     <string name="player">Player</string>
-
+    <string name="logout">Logout</string>
+    <string name="register">Entra</string>
+    
 </resources>
