--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="ivrea_map_title">Ivrea</string>
     <string name="ivrea_map_suggest">Scegli un luogo</string>
     <string name="ivrea_map_button_history">Storia</string>
+    <string name="ivrea_map_button_minigame">Minigame</string>
     <string name="ivrea_map_button_battle">Battaglia</string>
     <string name="orange">Arance</string>
 
@@ -24,5 +25,5 @@
     <string name="player">Player</string>
     <string name="logout">Logout</string>
     <string name="register">Entra</string>
-    
+
 </resources>
