--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="button_map">Gioca senza loggarti</string>
+    <string name="log_out">Disconnettiti</string>
     <string name="button_battle">Gioca</string>
     <string name="ivrea_map_title">Ivrea</string>
     <string name="ivrea_map_suggest">Scegli un luogo</string>
