--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="app_name">Carnevale di Ivrea</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="button_map">Gioca senza loggarti</string>
-    <string name="log_out">Disconnettiti</string>
-    <string name="button_battle">Gioca</string>
+    <string name="oppure">oppure</string>
+    <string name="button_map">PROVA IL GIOCO</string>
+    <string name="log_out">DISCONNETTITI</string>
+    <string name="button_battle">GIOCA</string>
     <string name="ivrea_map_title">Ivrea</string>
     <string name="ivrea_map_suggest">Scegli un luogo</string>
     <string name="ivrea_map_button_history">Storia</string>
