--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="oppure">oppure</string>
     <string name="button_map">PROVA IL GIOCO</string>
+    <string name="minigame_baloon">Gioca con me!</string>
+    <string name="otherTeam_baloon">Sfidami!</string>
     <string name="log_out">DISCONNETTITI</string>
     <string name="button_battle">GIOCA</string>
     <string name="ivrea_map_title">Ivrea</string>
