--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="oppure">oppure</string>
     <string name="button_map">PROVA IL GIOCO</string>
+    <string name="button_back">torna indietro</string>
     <string name="minigame_baloon">Gioca con me!</string>
     <string name="otherTeam_baloon">Sfidami!</string>
     <string name="log_out">DISCONNETTITI</string>
@@ -13,11 +14,14 @@
     <string name="ivrea_map_suggest">Scegli un luogo</string>
     <string name="ivrea_map_button_history">Storia</string>
     <string name="ivrea_map_button_minigame">Minigame</string>
+    <string name="start_minigame">Comincia</string>
+    <string name="next_game_in">Prossima partita tra</string>
     <string name="ivrea_map_button_openplace">Apri</string>
     <string name="ivrea_map_button_battle">Battaglia</string>
     <string name="leaderboard_btn">Classifica</string>
     <string name="orange">arance</string>
     <string name="predaindora_bg">Castellazzo</string>
+    <string name="predaindora_title">Preda in Dora</string>
     <string name="predaindora_btn">preda in Dora - roccia</string>
     <string name="quiz">Quiz</string>
 
@@ -59,8 +63,8 @@
     <string name="logout">Logout</string>
     <string name="register">Entra</string>
     <string name="loading">loading</string>
-
     <string name="gift_gained_msg">hai ottenuto {0} arance</string>
     <string name="fagiolata_title">Fagiolata Benefica</string>
-    
+    <string name="fagiolata_invite_singin">Accedi a Google Play Games! Potrai giocare con i tuoi amici e ricevere da loro preziosi carichi di arance.</string>
+
 </resources>
