--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,16 +51,16 @@
     <string name="accept">Accetta</string>
     <string name="refuse">No, grazie</string>
     <string name="accept0">Nessuna richiesta da accettare</string>
-    <string name="accept1">Vuoi accettare la richiesta di {0}?</string>
+    <string name="accept1">Vuoi accettare la richiesta di %s?</string>
     <string name="acceptMore">Vuoi accettare le seguenti richieste?\n\n</string>
-    <string name="acceptMoreLi">&#8226; {0} arance da {1}</string>
+    <string name="acceptMoreLi" formatted="false">&#8226; %s da %s</string>
     <string name="player">Player</string>
     <string name="default_player_name">Anonimo</string>
     <string name="logout">Logout</string>
     <string name="register">Entra</string>
     <string name="loading">loading</string>
 
-    <string name="gift_gained_msg">hai ottenuto {0} arance</string>
+    <string name="gift_gained_msg">hai ottenuto %d arance</string>
     <string name="fagiolata_title">Fagiolata Benefica</string>
     
 </resources>
