turn based game: logic

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Carnevale di Ivrea</string>
     <string name="action_settings">Settings</string>
     <string name="oppure">oppure</string>
+    <string name="please_login">Per accedere alla sfida, devi accedere al tuo account Google</string>
     <string name="button_map">PROVA IL GIOCO</string>
     <string name="button_back">torna indietro</string>
     <string name="minigame_baloon">Gioca con me!</string>
@@ -51,8 +52,9 @@
     <string name="send_request_description">A secco di arance? Chiedi agli amici!</string>
     <string name="send_gift">Invia arance</string>
     <string name="send_request">Chiedi agli amici</string>
-    <string name="open_inbox">Apri</string><string name="accept">Accetta</string>
-<string name="refuse">No, grazie</string>
+    <string name="open_inbox">Apri</string>
+    <string name="accept">Accetta</string>
+    <string name="refuse">No, grazie</string>
     <string name="accept0">Nessuna richiesta da accettare</string>
     <string name="accept1">Vuoi accettare la richiesta di %s?</string>
     <string name="acceptMore">Vuoi accettare le seguenti richieste?\n\n</string>
@@ -65,9 +67,9 @@
     <string name="gift_gained_msg">hai ottenuto %d arance</string>
     <string name="fagiolata_title">Fagiolata Benefica</string>
     <string name="fagiolata_invite_singin">Accedi a Google Play Games! Potrai giocare con i tuoi amici e ricevere da loro preziosi carichi di arance.</string>
-<string name="libroverbali_title">Libro dei verbali</string>
-
+    <string name="libroverbali_title">Libro dei verbali</string>
     <string name="youGain">Hai conquistato</string>
     <string name="yourScore">Il tuo punteggio</string>
-    
+    <string name="challenge">Sfida</string>
+
 </resources>
